src/app/AppSidebar/style.module.css
.sidebar {
  width: 14rem;
  height: 100%;
  padding: 8px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 10;
  opacity: 1;
  transition: opacity 0.3s ease 0s;
  visibility: visible;
}

.transition {
  transition:
    left 0s ease 0.3s,
    visibility 0s ease 0.3s;
}

.menus {
  width: 100%;
  height: 100%;
  opacity: 1;
  transition: none;
  transform: none;
  will-change: auto;
  border-radius: 14px;
  background: var(--color-surface);
}

@media screen and (width <= 48rem) {
  .sidebar {
    width: 100%;
    left: 100%;
    padding-top: 12px;
    visibility: hidden;

    .menus {
      opacity: 0;
      transform: translateY(-6px);
      padding: 12px 12px 0;
      background-color: var(--card);
      transition:
        opacity 0.3s ease 0s,
        transform 0.3s ease 0s;
    }

    &[data-expanded='true'] {
      visibility: visible;
      transition: none;
      left: 0;

      .menus {
        opacity: 1;
        transform: translateY(0px);
        will-change: opacity, transform;
        transition:
          opacity 0.45s ease 0s,
          transform 0.45s ease 0s;
      }
    }
  }
}

